--- a/charstim.Rmd
+++ b/charstim.Rmd
@@ -7,6 +7,7 @@ output:
 ---
 
 The first method of the **Fixed List of Attributes** submenu is the characterization of the stimulus space according to a fixed list of attributes.
+
 ```{r catdes1, out.width="80%", fig.align="left", echo=FALSE}
 #knitr::include_graphics("images/charstim1.png")
 ```
@@ -15,10 +16,11 @@ The first method of the **Fixed List of Attributes** submenu is the characteriza
 ## **The interface**
 As it can be seen in the figure above, the interface is very simple and only has 4 fields you need to worry about.
 <br><br />
-```{r catdes2, out.width="60%", fig.align="left", echo=FALSE}
+```{r catdes2, out.width="90%", fig.align="left", echo=FALSE}
 knitr::include_graphics("images/charstim2.png")
 ```
-Firstly, you put the variable __*Stimulus Effect*__ , a categorical variable that you wish to analyze. Then, you put the continuous and categorical variables you want to use for the characterization of the variable. 
+
+Firstly, you put the variable __*Stimulus Effect*__ , a variable that...
 <br><br />
 
 
