--- a/repstim.Rmd
+++ b/repstim.Rmd
@@ -1,108 +1,105 @@
 ---
-title: "Representation of the Stimulus Space"
+title: "Representation of the stimuli according to a fixed list of attributes"
 output:
   html_document:
     toc: yes
     toc_float: yes
 ---
 
-The second method of the **Fixed List of Attributes** submenu is the representation of the stimulus space according to a fixed list of attributes.
-
-```{r repstim1, out.width="65%", fig.align="left", echo=FALSE}
-#knitr::include_graphics("images/repstim1.png")
-```
-<br><br />
+Here, the *panellipse* function of the *SensoMineR* package has been interfaced: virtual panels are generated using Boostrap techniques in order to display confidence ellipses around products.
 
 ## **The interface**
 
-This interface has a richer structure than the first submenu.It might feels intimidating at first, but we will see how it works step by step.
+As shown in the figure below, the interface is very simple and only has 4 fields you need to worry about. Basically, it's the same main parameters as in the *decat* function, plus some graphic and resampling options that you don't need to worry about in the first instance.
 
-### Variable selection
 ```{r repstim2, out.width="65%", fig.align="left", echo=FALSE}
 knitr::include_graphics("images/repstim2.png")
 ```
-The first part is about selecting the variables for your analysis and giving them a role. As you can see on the figure above, there are 3 different types of variable for the representation (same as the first page of the submenu). The description of the attributes is available on the page __*Characterization of the stimulus space according to a fixed list of attributes*__.
-<br><br />
 
-### Options on the Sensory Attributes
+<!-- The first part is about selecting the variables for your analysis and giving them a role. As you can see on the figure above, there are 3 different types of variable for the representation (same as the first page of the submenu). The description of the attributes is available on the page __*Characterization of the stimulus space according to a fixed list of attributes*__. -->
+<!-- <br><br /> -->
 
-```{r repstim3, out.width="65%", fig.align="left", echo=FALSE}
-knitr::include_graphics("images/repstim3.png")
-```
+<!-- ### Options on the Sensory Attributes -->
 
-There are two filters concerning the __*Sensory Attributes*__ :
-- An option called __*Scale to unit variance*__. This option purpose is to normalize the Sensory Attributes used in the representation. Since most of the time the representation of stimuli are performed on normalized data, this option is checked by default.
-- An option __*Selection of the Sensory Attributes*__ that aims in choosing the __*p-value*__ of the Stimulus Effect.
+<!-- ```{r repstim3, out.width="65%", fig.align="left", echo=FALSE} -->
+<!-- knitr::include_graphics("images/repstim3.png") -->
+<!-- ``` -->
 
-### Graphic options
-```{r repstim4, out.width="65%", fig.align="left", echo=FALSE}
-knitr::include_graphics("images/repstim4.png")
-```
+<!-- There are two filters concerning the __*Sensory Attributes*__ : -->
+<!-- - An option called __*Scale to unit variance*__. This option purpose is to normalize the Sensory Attributes used in the representation. Since most of the time the representation of stimuli are performed on normalized data, this option is checked by default. -->
+<!-- - An option __*Selection of the Sensory Attributes*__ that aims in choosing the __*p-value*__ of the Stimulus Effect. -->
 
-Let’s move on to the next set of options: the Graphic options. As the name suggests, those options rule what will be plotted on the graphics in the results window. With those options, you can choose which components to plot on the x-axis and the y-axis. 
-For the additionnal plots, you have two possibilities: you can decide to add a plot that represents stimuli according to the panels of each product (separated with different colors), which shows the variability of stimuli, or you can choose an additionnal plot that does the same but with sensory attributes.
-<br><br />
+<!-- ### Graphic options -->
+<!-- ```{r repstim4, out.width="65%", fig.align="left", echo=FALSE} -->
+<!-- knitr::include_graphics("images/repstim4.png") -->
+<!-- ``` -->
 
-### Resampling Options
+<!-- Let’s move on to the next set of options: the Graphic options. As the name suggests, those options rule what will be plotted on the graphics in the results window. With those options, you can choose which components to plot on the x-axis and the y-axis.  -->
+<!-- For the additionnal plots, you have two possibilities: you can decide to add a plot that represents stimuli according to the panels of each product (separated with different colors), which shows the variability of stimuli, or you can choose an additionnal plot that does the same but with sensory attributes. -->
+<!-- <br><br /> -->
 
-```{r repstim5, out.width="65%", fig.align="left", echo=FALSE}
-knitr::include_graphics("images/repstim5.png")
-```
+<!-- ### Resampling Options -->
 
-With the  __*Resampling Options*__, you can choose the number of subjects and panels of your choice. Same method for the __*Significiance threshold*__ option. You can also center or scale by subject.
-<br><br />
+<!-- ```{r repstim5, out.width="65%", fig.align="left", echo=FALSE} -->
+<!-- knitr::include_graphics("images/repstim5.png") -->
+<!-- ``` -->
 
-### Numerical Indicators
+<!-- With the  __*Resampling Options*__, you can choose the number of subjects and panels of your choice. Same method for the __*Significiance threshold*__ option. You can also center or scale by subject. -->
+<!-- <br><br /> -->
 
-```{r repstim6, out.width="65%", fig.align="left", echo=FALSE}
-knitr::include_graphics("images/repstim6.png")
-```
+<!-- ### Numerical Indicators -->
 
-Lastly, we have the options for the numerical indicators. The Significance threshold option from the Automatic Description of the Axes section fixes the threshold beneath which a variable characterize a dimension. The option Number of factors affect both the number of dimensions to be described and the number of dimensions shown for the tables.
-<br><br />
+<!-- ```{r repstim6, out.width="65%", fig.align="left", echo=FALSE} -->
+<!-- knitr::include_graphics("images/repstim6.png") -->
+<!-- ``` -->
 
-## **Potential issue(s)**
-Concerning the __*Resampling Options*__, the number of subjects/ panels must not 
+<!-- Lastly, we have the options for the numerical indicators. The Significance threshold option from the Automatic Description of the Axes section fixes the threshold beneath which a variable characterize a dimension. The option Number of factors affect both the number of dimensions to be described and the number of dimensions shown for the tables. -->
+<!-- <br><br /> -->
+
+<!-- ## **Potential issue(s)** -->
+<!-- Concerning the __*Resampling Options*__, the number of subjects/ panels must not  -->
 
 ## **Example**
-For this example, we will be using again the chocolate data set "sensochoc" (available with SEDA).
+For this example, we will be using the *sensochoc* data set, available with SEDA: 6 chocolates have been evaluated twice by 29 panelists, according to 14 sensory attributes.
 
-```{r repstim7, out.width="90%", fig.align="left", echo=FALSE}
+```{r charstim5, out.width="90%", fig.align="left", echo=FALSE}
 knitr::include_graphics("images/charstim5.png")
 ```
 <br><br />
+
+We are going to get a multivariate representation of the chocolates according to all the sensory attributes. To do so, for each sensory attribute, the *panellipse* function performs an analysis of variance, explaining the variability among the assessments by the stimulus effect and the panelist effect. Then, from the adjusted means calculated for each stimulus and each attribute, the *panellipse* function performs a PCA in order to get a multivariate representation of the stimuli.
 
 ```{r repstim8, out.width="65%", fig.align="left", echo=FALSE}
 knitr::include_graphics("images/repstim7.png")
 ```
 <br><br />
 
+As explained previously, a PCA is performed on the adjusted means calculated  from the *anova*. The PCA provides a representation of the stimuli as illustrated below.
+
 ```{r repstim9, out.width="95%", fig.align="left", echo=FALSE}
 knitr::include_graphics("images/repstim8.png")
 ```
 <br><br />
+
+It also provides a representation of the sensory attributes as illustrated below.
 
 ```{r repstim10, out.width="70%", fig.align="left", echo=FALSE}
 knitr::include_graphics("images/repstim9.png")
 ```
 <br><br />
 
-```{r repstim11, out.width="60%", fig.align="left", echo=FALSE}
-knitr::include_graphics("images/repstim10.png")
-```
-<br><br />
+These two representations are to be interpreted jointly. They can also be interpreted thanks to the automatic description of the axes provided below.
 
-```{r repstim12, out.width="40%", fig.align="left", echo=FALSE}
+```{r repstim12, out.width="35%", fig.align="left", echo=FALSE}
 knitr::include_graphics("images/repstim11.png")
 ```
 <br><br />
+
+Thanks to resampling techniques, confidence ellipses around stimuli can be obtained. The idea is simple: virtual panels are generated thanks to resampling techniques and *new* adjusted means are calculated and added as supplementary information.
 
 ```{r repstim13, out.width="95%", fig.align="left", echo=FALSE}
 knitr::include_graphics("images/repstim12.png")
 ```
 <br><br />
 
-```{r repstim14, out.width="80%", fig.align="left", echo=FALSE}
-knitr::include_graphics("images/repstim13.png")
-```
-<br><br />
+The number of virtual panels can be modified, as well as the number of panelists *per* virtual panel.
